tests/neg/i1653.scala
trait Foo {
  def foo() = new Unit with Foo  // error
}
